<resources>
    <string name="app_name">Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_title">Main Title</string>
    <string name="notes">Notes</string>
    <string name="pin_note">Pin Note</string>
    <string name="pinned_notes">Pinned Notes</string>
    <string name="deleted_notes">Deleted Notes</string>
    <string name="action">ACTION</string>
    <string name="settings">Settings</string>
    <string name="logout">LOGOUT</string>
    <string name="nothing_here">Notes you add appear here</string>
    <string name="enter_password">Please enter pin</string>
    <string name="login_warning">PRIVATE PROPERTY BEYOND THIS POINT</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="empty_note_sign">empty_note_sign</string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="create_a_login_pin">CREATE A 4-DIGIT PIN</string>
    <string name="re_enter_pin">Re-enter PIN</string>
    <string name="edit_note">Edit Note</string>
    <string name="my_notes">My Notes</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="new_note">New Note</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="delete_note">Delete Note</string>
    <string name="unpin_note">Unpin Note</string>
    <string name="restore_note">Restore Note</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="use_fingerprint">Use Biometric</string>
</resources>