<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_circle">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="10dp"
            android:src="@drawable/app"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:textColor="#fff"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="32dp">

        <View
            android:id="@+id/cursor"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/layout_psd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:layout_marginTop="60dp"
        android:padding="30dp">

        <TextView
            android:id="@+id/number1"
            style="@style/NumberInPasscode"
            android:layout_alignParentStart="true"
            android:text="@string/number_1" />

        <TextView
            android:id="@+id/number2"
            style="@style/NumberInPasscode"
            android:layout_centerHorizontal="true"
            android:text="@string/number_2" />

        <TextView
            android:id="@+id/number3"
            style="@style/NumberInPasscode"
            android:layout_alignParentEnd="true"
            android:text="@string/number_3" />

        <TextView
            android:id="@+id/number4"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number1"
            android:layout_alignParentStart="true"
            android:text="@string/number_4" />

        <TextView
            android:id="@+id/number5"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number1"
            android:layout_centerHorizontal="true"
            android:text="@string/number_5" />

        <TextView
            android:id="@+id/number6"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number1"
            android:layout_alignParentEnd="true"
            android:text="@string/number_6" />

        <TextView
            android:id="@+id/number7"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number4"
            android:layout_alignParentStart="true"
            android:text="@string/number_7" />

        <TextView
            android:id="@+id/number8"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number4"
            android:layout_centerHorizontal="true"
            android:text="@string/number_8" />

        <TextView
            android:id="@+id/number9"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number4"
            android:layout_alignParentEnd="true"
            android:text="@string/number_9" />

        <ImageView
            android:id="@+id/numberB"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number7"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_backspace"
            app:tint="#000"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/number0"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number7"
            android:layout_centerHorizontal="true"
            android:text="@string/number_0" />

        <ImageView
            android:id="@+id/numberOK"
            style="@style/NumberInPasscode"
            android:layout_below="@id/number7"
            android:layout_alignParentStart="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_check"
            app:tint="#000"
            tools:ignore="ContentDescription" />

    </RelativeLayout>
    <Button
        android:id="@+id/forgot_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/forgot_pin"/>
</LinearLayout>