<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".CreatePass">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/create_a_login_pin"
        android:textColor="#fff"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/enter_pin"
        android:textColor="#fff"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/create_pin1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="center"
        android:inputType="number"
        android:padding="5dp"
        android:autofillHints="number"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/re_enter_pin"
        android:textColor="#fff"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/create_pin2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:gravity="center"
        android:inputType="number"
        android:padding="5dp"
        android:autofillHints="number"
        tools:ignore="LabelFor"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/confirm"
        android:onClick="confirm"
        android:padding="10dp"
        android:fontFamily="serif"
        android:textSize="20sp"
        android:textColor="#fff" />

</LinearLayout>