<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="2dp"
        android:fontFamily="serif"
        android:text="@string/new_note"
        android:textColor="#F4F4F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_save"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:onClick="save"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="number"
        android:background="#4E4F50"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/close"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:autofillHints="number"
        android:background="#4E4F50"
        android:gravity="start"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>