<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#4E4F50"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditNote">

    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="2dp"
        android:fontFamily="serif"
        android:text="@string/edit_note"
        android:textColor="#F4F4F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_title"/>

    <ImageView
        android:id="@+id/btn_save"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:onClick="save"
        android:src="@drawable/ic_save"
        tools:ignore="ContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_title"/>


    <TextView
        android:id="@+id/notes_update_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="number"
        android:background="#4E4F50"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#AEAEAE"
        android:textSize="25sp"
        tools:ignore="LabelFor"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:autofillHints="number"
        android:background="#4E4F50"
        android:gravity="start"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#ffffff"
        android:textColorHint="#AEAEAE"
        android:textSize="20sp"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="233dp"
        app:layout_constraintTop_toBottomOf="@id/edit_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>